--- a/build.gradle
+++ b/build.gradle
@@ -40,12 +40,15 @@ dependencies {
     'org.glassfish.jersey.inject:jersey-hk2:2.26',
     "org.glassfish.jersey.containers:jersey-container-servlet-core:2.26",
     "org.glassfish.jersey.containers:jersey-container-servlet:2.26",
+    'org.glassfish.jersey.core:jersey-client:2.26',
+    "org.glassfish.jersey.media:jersey-media-json-jackson:2.26",
 
     "com.fasterxml.jackson.core:jackson-core:2.9.2",
     "com.fasterxml.jackson.core:jackson-annotations:2.9.2",
     "com.fasterxml.jackson.core:jackson-databind:2.9.2",
     "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.2",
-    "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.2"
+    "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.2",
+
   )
 }
 
