--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 buildscript {
-  repositories {
-    maven { url 'https://nexusnew.dart/content/repositories/snapshots/' }
-    maven { url 'https://nexusnew.dart/content/repositories/releases' }
-    maven { url 'https://nexusnew.dart/content/groups/public/' }
-    maven { url 'https://nexusnew.dart/content/repositories/central/' }
-  }
-  dependencies {
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.60"
-  }
+    repositories {
+        mavenCentral()
+        maven { url 'https://nexusnew.dart/content/repositories/snapshots/' }
+        maven { url 'https://nexusnew.dart/content/repositories/releases' }
+        maven { url 'https://nexusnew.dart/content/groups/public/' }
+        maven { url 'https://nexusnew.dart/content/repositories/central/' }
+    }
+    dependencies {
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.1.60"
+    }
 }
 
 group 'johnson.dev'
@@ -20,38 +21,45 @@ apply plugin: 'war'
 sourceCompatibility = 1.8
 
 repositories {
-  maven { url 'https://nexusnew.dart/content/repositories/snapshots/' }
-  maven { url 'https://nexusnew.dart/content/repositories/releases' }
-  maven { url 'https://nexusnew.dart/content/groups/public/' }
-  maven { url 'https://nexusnew.dart/content/repositories/central/' }
+    mavenCentral()
+    maven { url 'https://nexusnew.dart/content/repositories/snapshots/' }
+    maven { url 'https://nexusnew.dart/content/repositories/releases' }
+    maven { url 'https://nexusnew.dart/content/groups/public/' }
+    maven { url 'https://nexusnew.dart/content/repositories/central/' }
 }
 
 dependencies {
-  compile(
-    "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.60",
-    "org.jetbrains.kotlin:kotlin-runtime:1.1.60",
+    compile(
+            "org.jetbrains.kotlin:kotlin-stdlib-jre8:1.1.60",
+            "org.jetbrains.kotlin:kotlin-runtime:1.1.60",
 
-    "javax.servlet:javax.servlet-api:3.1.0",
+            "javax.servlet:javax.servlet-api:3.1.0",
 
-    "org.slf4j:slf4j-api:1.7.25",
-    "org.slf4j:slf4j-log4j12:1.7.25",
+            "org.slf4j:slf4j-api:1.7.25",
+            "org.slf4j:slf4j-log4j12:1.7.25",
 
-    'org.glassfish.jersey.core:jersey-common:2.26',
-    'org.glassfish.jersey.inject:jersey-hk2:2.26',
-    "org.glassfish.jersey.containers:jersey-container-servlet-core:2.26",
-    "org.glassfish.jersey.containers:jersey-container-servlet:2.26",
-    'org.glassfish.jersey.core:jersey-client:2.26',
-    "org.glassfish.jersey.media:jersey-media-json-jackson:2.26",
+            'org.glassfish.jersey.core:jersey-common:2.26',
+            'org.glassfish.jersey.inject:jersey-hk2:2.26',
+            "org.glassfish.jersey.containers:jersey-container-servlet-core:2.26",
+            "org.glassfish.jersey.containers:jersey-container-servlet:2.26",
+            'org.glassfish.jersey.core:jersey-client:2.26',
+            "org.glassfish.jersey.media:jersey-media-json-jackson:2.26",
 
-    "com.fasterxml.jackson.core:jackson-core:2.9.2",
-    "com.fasterxml.jackson.core:jackson-annotations:2.9.2",
-    "com.fasterxml.jackson.core:jackson-databind:2.9.2",
-    "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.2",
-    "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.2",
+            "com.fasterxml.jackson.core:jackson-core:2.9.2",
+            "com.fasterxml.jackson.core:jackson-annotations:2.9.2",
+            "com.fasterxml.jackson.core:jackson-databind:2.9.2",
+            "com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.9.2",
+            "com.fasterxml.jackson.jaxrs:jackson-jaxrs-json-provider:2.9.2",
 
-  )
+            "org.postgresql:postgresql:42.1.4",
+
+            "org.hibernate:hibernate-core:5.2.12.Final",
+            "org.hibernate:hibernate-validator:6.0.5.Final",
+            "org.hibernate:hibernate-c3p0:5.2.12.Final"
+
+    )
 }
 
 compileKotlin {
-  kotlinOptions.jvmTarget = "1.8"
+    kotlinOptions.jvmTarget = "1.8"
 }
