--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
-/.idea/**/*
-/target/**/*
-/out/**/*
-/build/**/*
-/node_modules/**/*
+/.idea/**
+/target/**
+/out/**
+/build/**
+/node_modules/**
 
 *.iml
 *.ipr
