--- a/package.json
+++ b/package.json
@@ -7,9 +7,14 @@
     "type": "git",
     "private": true,
     "main": "gulpfile.js",
+    "scripts": {
+        "build-dev": "",
+        "build-prod": ""
+    },
     "devDependencies": {
         "autoprefixer": "^7.1.6",
         "babel-core": "^6.26.0",
+        "babel-loader": "^7.1.2",
         "babel-plugin-transform-decorators-legacy": "^1.3.4",
         "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
         "babel-polyfill": "^6.26.0",
@@ -22,6 +27,8 @@
         "babel-preset-stage-1": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "babel-preset-stage-3": "^6.24.1",
+        "browserify": "^14.5.0",
+        "cssnano": "^3.10.0",
         "gulp": "^3.9.1",
         "gulp-autoprefixer": "^4.0.0",
         "gulp-babel": "^7.0.0",
@@ -29,7 +36,7 @@
         "gulp-if": "^2.0.2",
         "gulp-plumber": "^1.1.0",
         "gulp-postcss": "^7.0.0",
-        "cssnano": "^3.10.0",
+        "gulp-rename": "^1.2.2",
         "gulp-sass": "^3.1.0",
         "gulp-server-livereload": "^1.9.2",
         "gulp-sourcemaps": "^2.6.1",
@@ -39,8 +46,10 @@
         "merge": "^1.2.0",
         "multipipe": "^2.0.1",
         "path": "^0.12.7",
+        "through2": "latest",
+        "vinyl-source-stream": "^1.1.0",
         "webpack": "^3.8.1",
-        "babel-loader": "^7.1.2"
+        "webpack-stream": "^4.0.0"
     },
     "dependencies": {
         "react": "^16.1.1",
