--- a/package.json
+++ b/package.json
@@ -27,33 +27,26 @@
         "babel-preset-stage-1": "^6.24.1",
         "babel-preset-stage-2": "^6.24.1",
         "babel-preset-stage-3": "^6.24.1",
-        "browserify": "^14.5.0",
+        "css-loader": "^0.28.7",
         "cssnano": "^3.10.0",
+        "extract-text-webpack-plugin": "^3.0.2",
         "gulp": "^3.9.1",
-        "gulp-autoprefixer": "^4.0.0",
-        "gulp-babel": "^7.0.0",
-        "gulp-concat": "^2.6.1",
         "gulp-if": "^2.0.2",
         "gulp-plumber": "^1.1.0",
-        "gulp-postcss": "^7.0.0",
-        "gulp-rename": "^1.2.2",
-        "gulp-sass": "^3.1.0",
         "gulp-server-livereload": "^1.9.2",
         "gulp-sourcemaps": "^2.6.1",
-        "gulp-sync": "^0.1.4",
-        "gulp-uglify": "^3.0.0",
         "gulp-util": "^3.0.8",
-        "merge": "^1.2.0",
         "multipipe": "^2.0.1",
-        "path": "^0.12.7",
-        "through2": "latest",
-        "vinyl-source-stream": "^1.1.0",
+        "node-sass": "^4.7.2",
+        "postcss-loader": "^2.0.9",
+        "sass-loader": "^6.0.6",
         "webpack": "^3.8.1",
         "webpack-stream": "^4.0.0"
     },
     "dependencies": {
         "react": "^16.1.1",
         "react-dom": "^16.1.1",
-        "underscore": "^1.8.3"
+        "underscore": "^1.8.3",
+        "axios": "^0.17.1"
     }
 }
