Баловство. Эксперименты с реактом и его роутером.

--- a/package.json
+++ b/package.json
@@ -1,52 +1,53 @@
 {
-    "name": "steam.usefull.package",
-    "version": "0.0.1-SNAPSHOT",
-    "description": "Steam.Usefull - web package profile",
-    "author": "Johnson",
-    "license": "ISC",
-    "type": "git",
-    "private": true,
-    "main": "gulpfile.js",
-    "scripts": {
-        "build-dev": "",
-        "build-prod": ""
-    },
-    "devDependencies": {
-        "autoprefixer": "^7.1.6",
-        "babel-core": "^6.26.0",
-        "babel-loader": "^7.1.2",
-        "babel-plugin-transform-decorators-legacy": "^1.3.4",
-        "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
-        "babel-polyfill": "^6.26.0",
-        "babel-preset-env": "^1.6.1",
-        "babel-preset-es2015": "^6.24.1",
-        "babel-preset-es2016": "^6.24.1",
-        "babel-preset-es2017": "^6.24.1",
-        "babel-preset-react": "^6.24.1",
-        "babel-preset-stage-0": "^6.24.1",
-        "babel-preset-stage-1": "^6.24.1",
-        "babel-preset-stage-2": "^6.24.1",
-        "babel-preset-stage-3": "^6.24.1",
-        "css-loader": "^0.28.7",
-        "cssnano": "^3.10.0",
-        "extract-text-webpack-plugin": "^3.0.2",
-        "gulp": "^3.9.1",
-        "gulp-if": "^2.0.2",
-        "gulp-plumber": "^1.1.0",
-        "gulp-server-livereload": "^1.9.2",
-        "gulp-sourcemaps": "^2.6.1",
-        "gulp-util": "^3.0.8",
-        "multipipe": "^2.0.1",
-        "node-sass": "^4.7.2",
-        "postcss-loader": "^2.0.9",
-        "sass-loader": "^6.0.6",
-        "webpack": "^3.8.1",
-        "webpack-stream": "^4.0.0"
-    },
-    "dependencies": {
-        "react": "^16.1.1",
-        "react-dom": "^16.1.1",
-        "underscore": "^1.8.3",
-        "axios": "^0.17.1"
-    }
+  "name": "steam.usefull.package",
+  "version": "0.0.1-SNAPSHOT",
+  "description": "Steam.Usefull - web package profile",
+  "author": "Johnson",
+  "license": "ISC",
+  "type": "git",
+  "private": true,
+  "main": "gulpfile.js",
+  "scripts": {
+    "build-dev": "",
+    "build-prod": ""
+  },
+  "devDependencies": {
+    "autoprefixer": "^7.1.6",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2016": "^6.24.1",
+    "babel-preset-es2017": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "css-loader": "^0.28.7",
+    "cssnano": "^3.10.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "gulp": "^3.9.1",
+    "gulp-if": "^2.0.2",
+    "gulp-plumber": "^1.1.0",
+    "gulp-server-livereload": "^1.9.2",
+    "gulp-sourcemaps": "^2.6.1",
+    "gulp-util": "^3.0.8",
+    "multipipe": "^2.0.1",
+    "node-sass": "^4.7.2",
+    "postcss-loader": "^2.0.9",
+    "sass-loader": "^6.0.6",
+    "webpack": "^3.8.1",
+    "webpack-stream": "^4.0.0"
+  },
+  "dependencies": {
+    "axios": "^0.17.1",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
+    "react-router-dom": "^4.2.2",
+    "underscore": "^1.8.3"
+  }
 }
